--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "android": "node node_modules/react-native/local-cli/cli.js run-android",
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "16.6.3",
-    "react-native": "0.57.8"
+    "react-native": "0.57.8",
+    "react-redux": "^6.0.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
