--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,18 @@
     "android": "node node_modules/react-native/local-cli/cli.js run-android",
     "test": "jest"
   },
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "axios": "^0.18.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-animatable": "^1.3.1",
+    "react-native-fontawesome": "^5.7.0",
+    "validate.js": "^0.12.0",
+    "react-navigation": "^3.3.0",
     "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
@@ -22,5 +29,10 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
+  }  
 }
