--- a/client/package.json
+++ b/client/package.json
@@ -7,25 +7,27 @@
     "android": "node node_modules/react-native/local-cli/cli.js run-android",
     "test": "jest"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://192.168.1.42:5000",
   "dependencies": {
     "axios": "^0.18.0",
+    "jwt-decode": "^2.2.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-animatable": "^1.3.1",
     "react-native-fontawesome": "^5.7.0",
-    "validate.js": "^0.12.0",
     "react-navigation": "^3.3.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "validate.js": "^0.12.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.51.1",
-    "react-test-renderer": "16.6.3"
+    "react-test-renderer": "16.6.3",
+    "redux-devtools-extension": "^2.13.8"
   },
   "jest": {
     "preset": "react-native"
@@ -34,5 +36,5 @@
     "assets": [
       "./assets/fonts/"
     ]
-  }  
+  }
 }
