--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "proxy": "http://192.168.1.42:5000",
   "dependencies": {
     "axios": "^0.18.0",
+    "crypto-js": "^3.1.9-1",
     "jwt-decode": "^2.2.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
