--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-native-animatable": "^1.3.1",
     "react-native-fontawesome": "^5.7.0",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-image-picker": "^0.28.1",
     "react-native-swipe-gestures": "^1.0.3",
     "react-navigation": "^3.3.0",
     "react-redux": "^6.0.0",
