--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "proxy": "http://192.168.1.42:5000",
   "dependencies": {
+    "@mapbox/react-native-mapbox-gl": "^6.1.3",
     "axios": "^0.18.0",
     "crypto-js": "^3.1.9-1",
     "jwt-decode": "^2.2.0",
