--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "crypto-js": "^3.1.9-1",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-animatable": "^1.3.1",
