added expo functionalities

--- a/client/android/build.gradle
+++ b/client/android/build.gradle
@@ -25,10 +25,12 @@ allprojects {
         mavenLocal()
         google()
         jcenter()
+        maven
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
+
     }
 }
 
