--- a/client/package.json
+++ b/client/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "client",
+  "name": "wayking",
   "version": "0.0.1",
-  "private": true,
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "android": "node node_modules/react-native/local-cli/cli.js run-android",
-    "test": "jest"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "eject": "expo eject"
   },
-  "proxy": "http://10.0.2.2:5000",
   "dependencies": {
-    "@mapbox/react-native-mapbox-gl": "^6.1.3",
     "axios": "^0.18.0",
     "crypto-js": "^3.1.9-1",
+    "expo": "^32.0.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
-    "react": "16.6.3",
-    "react-native": "0.57.8",
+    "react": "16.5.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-animatable": "^1.3.1",
     "react-native-fontawesome": "^5.7.0",
-    "react-native-gesture-handler": "^1.1.0",
     "react-native-image-picker": "^0.28.1",
     "react-native-swipe-gestures": "^1.0.3",
     "react-navigation": "^3.3.0",
@@ -29,18 +28,12 @@
     "validate.js": "^0.12.0"
   },
   "devDependencies": {
+    "babel-preset-expo": "^5.0.0",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.51.1",
     "react-test-renderer": "16.6.3",
     "redux-devtools-extension": "^2.13.8"
   },
-  "jest": {
-    "preset": "react-native"
-  },
-  "rnpm": {
-    "assets": [
-      "./assets/fonts/"
-    ]
-  }
+  "private": true
 }
